# -2025

./: .gitignore  README.md  pyproject.toml  requirements.txt
codes/: sec_01_setup.py  sec_02_data_type.py  sec_03_pd_vs_pl.py  sec_04_csv_vs_parquet.py
